--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,14 +1,7 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
+  # Trigger the workflow on push or pull request events to the main branch
   push:
     branches: [ "main" ]
   pull_request:
@@ -17,19 +10,29 @@ on:
 jobs:
   build:
 
+    # Specify the environment to run the job
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Check out the repository code
     - uses: actions/checkout@v4
+
+    # Step 2: Set up JDK 17 environment
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn test
+        java-version: '17'        # Specify the Java version to use
+        distribution: 'temurin'  # Use the Eclipse Temurin distribution of JDK
+        cache: maven             # Enable caching of Maven dependencies
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    # Step 3: Build the project with Maven
+    - name: Build with Maven
+      run: mvn --batch-mode --update-snapshots package
+
+    # Step 4: Run tests for the specified class using Maven
+    - name: Build and test with Maven
+      run: mvn test -Dtest=com.springboot.CartOfferApplicationTests
+
+    # Step 5: Clean up after the build and tests
+    - name: Clean up after run
+      run: mvn clean
